--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,13 +1,18 @@
 version: '3'
 
-env:
-  GOOS: linux
-  GOARCH: amd64
-  CGO_ENABLED: 0
-
 tasks:
   default:
     cmds:
-    - (cd analytics1d && go build -o ../bin/analytics1d)
-    - (cd analytics1w && go build -o ../bin/analytics1w)
-    - (cd analytics1m && go build -o ../bin/analytics1m)
+    - (cd analytics1d && go clean && go build -o ../bin/analytics1d)
+    - (cd analytics1w && go clean && go build -o ../bin/analytics1w)
+    - (cd analytics1m && go clean && go build -o ../bin/analytics1m)
+
+  dist:
+    env:
+      GOOS: linux
+      GOARCH: amd64
+      CGO_ENABLED: 0
+    cmds:
+    - (cd analytics1d && go clean && go build -o ../bin/dist/analytics1d && cd ../bin/dist && zip analytics1d.zip analytics1d)
+    - (cd analytics1w && go clean && go build -o ../bin/dist/analytics1w && cd ../bin/dist && zip analytics1w.zip analytics1w)
+    - (cd analytics1m && go clean && go build -o ../bin/dist/analytics1m && cd ../bin/dist && zip analytics1m.zip analytics1m)
