--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -3,9 +3,9 @@ version: '3'
 tasks:
   default:
     cmds:
-    - (cd analytics1d && go clean && go build -o ../bin/analytics1d)
-    - (cd analytics1w && go clean && go build -o ../bin/analytics1w)
-    - (cd analytics1m && go clean && go build -o ../bin/analytics1m)
+    - (cd analytics1d && go clean && go build -ldflags="-s -w" -trimpath -buildmode=pie -buildmode=c-shared -o ../bin/analytics1d)
+    - (cd analytics1w && go clean && go build -ldflags="-s -w" -trimpath -buildmode=pie -buildmode=c-shared -o ../bin/analytics1w)
+    - (cd analytics1m && go clean && go build -ldflags="-s -w" -trimpath -buildmode=pie -buildmode=c-shared -o ../bin/analytics1m)
 
   dist:
     env:
