--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     - DOCKER_HOST=unix:///var/run/docker.sock
     volumes:
     - localstack_data:/var/lib/localstack
-    - ./src:/tmp/cloudflare-analytics/main.zip
+    - ./src:/tmp/cloudflare-analytics
     - /var/run/docker.sock:/var/run/docker.sock
 
 volumes:
