maybe terraform works

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
+# for running the lambda locally
 CLOUDFLARE_ZONE=
 CLOUDFLARE_EMAIL=
 CLOUDFLARE_TOKEN=
 AWS_S3_BUCKET=
+
+# for uploading the binary to non-local infrastructure
+AWS_PROFILE=analytics
+CODE_BUCKET_NAME=lambda-ac93uk-cloudflare-analytics
