--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ terraform/.terraform
 terraform/terraform.tfvars
 terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
+terraform/.terraform.tfstate.lock.info
