--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ AWS_S3_BUCKET=
 # for uploading the binary to non-local infrastructure
 AWS_PROFILE=analytics
 CODE_BUCKET_NAME=lambda-ac93uk-cloudflare-analytics
+DATA_BUCKET_NAME=ac93uk-cloudflare-analytics
