--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 .idea/
 bin/**
 !bin/.gitkeep
-run.sh
-**terraform**
-!terraform.tfvars.example
+src/main
+src/main.zip
+.env
+terraform/.terraform
+terraform/terraform.tfvars
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+terraform/.terraform.tfstate.lock.info
