--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,18 +1,25 @@
-version: '3'
+---
+version: "3"
+
+dotenv:
+- .env
+
+includes:
+  go:
+    taskfile: src/Taskfile.yaml
+    dir: src
+  localstack:
+    taskfile: tasks/localstack.yaml
+  event:
+    taskfile: tasks/event.yaml
+  s3:
+    taskfile: tasks/s3.yaml
+  terraform:
+    taskfile: terraform/Taskfile.yaml
+    dir: terraform
 
 tasks:
   default:
+    silent: true
     cmds:
-    - (cd analytics1d && go clean && go build -ldflags="-s -w" -trimpath -buildmode=pie -buildmode=c-shared -o ../bin/analytics1d)
-    - (cd analytics1w && go clean && go build -ldflags="-s -w" -trimpath -buildmode=pie -buildmode=c-shared -o ../bin/analytics1w)
-    - (cd analytics1m && go clean && go build -ldflags="-s -w" -trimpath -buildmode=pie -buildmode=c-shared -o ../bin/analytics1m)
-
-  dist:
-    env:
-      GOOS: linux
-      GOARCH: amd64
-      CGO_ENABLED: 0
-    cmds:
-    - (cd analytics1d && go clean && go build -o ../bin/dist/analytics1d && cd ../bin/dist && zip analytics1d.zip analytics1d)
-    - (cd analytics1w && go clean && go build -o ../bin/dist/analytics1w && cd ../bin/dist && zip analytics1w.zip analytics1w)
-    - (cd analytics1m && go clean && go build -o ../bin/dist/analytics1m && cd ../bin/dist && zip analytics1m.zip analytics1m)
+    - cmd: task --list --sort=none
